# mallah-app

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/consumer/: auth.py  me.py
app/api/ops/: health.py
app/core/: cache.py  config.py  db.py  deps.py  exceptions.py  logging.py  middleware.py  security.py
app/modules/admin/: __init__.py  router.py
app/modules/analytics/: __init__.py  router.py
app/modules/auth/: __init__.py  firebase.py  models.py  schemas.py  service.py
app/modules/cart/: __init__.py  router.py
app/modules/catalog/: __init__.py
app/modules/compare/: __init__.py  router.py
app/modules/favorites/: __init__.py  router.py
app/modules/home/: __init__.py  router.py
app/modules/ingest/: __init__.py  router.py
app/modules/notifications/: __init__.py  router.py
app/modules/search/: __init__.py  router.py
migrations/: env.py
migrations/versions/: 0001_d1_baseline.py  0002_add_gender_and_dob.py  0003_d2_catalog_baseline.py
nginx/: nginx.conf
progress/: current-state.md
scripts/: postgres-init.sql  seed_data.py  start.sh  verify_seed.sh
tests/: conftest.py  test-d1.sh  test_auth.py
